Added old development version

--- a/MusicPlayer.ucf
+++ b/MusicPlayer.ucf
@@ -4,6 +4,8 @@ NET "mmc_cs" LOC = D7;
 NET "mmc_miso" LOC = B4;
 NET "mmc_mosi" LOC = D8;
 NET "reset" LOC = L14;
+NET "vol_up" LOC = M13;
+NET "vol_down" LOC = M14;
 NET "leds[0]" LOC = K12;
 NET "leds[1]" LOC = P14;
 NET "leds[2]" LOC = L12;
