--- a/docs/src/Makefile
+++ b/docs/src/Makefile
@@ -1,7 +1,10 @@
 DOT 	:= $(shell ls *.dot)
 PDF = $(DOT:%.dot=%.pdf)
 
-app: ${PDF}
+app: ${PDF} LATEX
 
 ${PDF}:  %.pdf : %.dot
 	dot -Tpdf $< > ../$@ 
+
+LATEX: doc.tex
+	pdflatex -output-directory=.. doc.tex 
